@@ -1,7 +1,7 @@
 // -*- MPC -*-
 // $Id$
 
-feature(dds4ccm_opendds) : dds4ccm_skel, dds4ccm_lem_stub, dcps {
+feature(dds4ccm_opendds) : dds4ccm_skel, dds4ccm_lem_stub, dcps_lem_stub, dcps {
   after += CIAO_DDS4CCM_DDS_Impl
   libs += CIAO_DDS4CCM_DDS_Impl
   includes += $(CIAO_ROOT)/connectors \
